# praxis

./: .gitattributes  .gitignore  Cargo.toml  Containerfile  LICENSE  Makefile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  (+1 more)
core/: Cargo.toml
core/src/: health.rs  id.rs  lib.rs  logging.rs  memory.rs  time.rs
core/src/callout/: circuit.rs  mod.rs  tests.rs
core/src/config/: admin.rs  body_limits.rs  bootstrap.rs  branch_chain.rs  chain_ref.rs  filters.rs  insecure_options.rs  listener.rs  mod.rs  parse.rs  route.rs  runtime.rs
core/src/config/cluster/: endpoint.rs  health_check.rs  load_balancer_strategy.rs  mod.rs
core/src/config/condition/: mod.rs  request.rs  response.rs
core/src/config/validate/: branch_chain.rs  filter_chain.rs  mod.rs  rules.rs
core/src/config/validate/cluster/: endpoints.rs  health_check.rs  mod.rs  timeouts.rs  tls.rs
core/src/config/validate/listener/: address.rs  mod.rs  rules.rs  timeouts.rs
core/src/connectivity/: connection_options.rs  mod.rs  network.rs  upstream.rs
core/src/kv/: memory.rs  mod.rs
core/src/server/: mod.rs  pingora.rs  runtime.rs
filter/: Cargo.toml
filter/ext-proc/: NOTICE  build.rs
filter/ext-proc/proto/: envoy_common.proto  ext_proc.proto
filter/ext-proc/proto/google/protobuf/: any.proto  duration.proto  struct.proto  wrappers.proto
filter/ext-proc/src/: callout.rs  duplex.rs  lib.rs  mutations.rs  proto.rs  tests.rs
filter/proto/: Cargo.toml
filter/proto/src/: lib.rs
filter/src/: actions.rs  any_filter.rs  context.rs  extensions.rs  factory.rs  filter.rs  lib.rs  path_match.rs  registry.rs  results.rs  tcp_filter.rs
filter/src/body/: access.rs  buffer.rs  builder.rs  mod.rs  mode.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs
filter/src/builtins/http/ai/: mod.rs  token_usage_headers.rs
filter/src/builtins/http/observability/: access_log.rs  mod.rs  request_id.rs
filter/src/builtins/http/payload_processing/: compression.rs  compression_config.rs  mod.rs
filter/src/builtins/http/security/: forwarded_headers.rs  ip_acl.rs  mod.rs  origin_normalize.rs  peer_identity_trust.rs
filter/src/builtins/http/traffic_management/: endpoint_selector.rs  mod.rs  redirect.rs  static_response.rs  timeout.rs  token_bucket.rs
filter/src/builtins/http/transformation/: mod.rs  path_sanitize.rs  url_rewrite.rs
filter/src/builtins/tcp/: mod.rs
filter/src/builtins/tcp/observability/: mod.rs  tcp_access_log.rs
filter/src/builtins/tcp/traffic_management/: mod.rs  sni_router.rs  tcp_load_balancer.rs
filter/src/condition/: mod.rs  request.rs  response.rs
filter/src/load_balancing/: consistent_hash.rs  endpoint.rs  least_connections.rs  mod.rs  p2c.rs  round_robin.rs  strategy.rs
filter/src/pipeline/: body.rs  branch.rs  build.rs  build_branch.rs  checks.rs  clusters.rs  evaluate.rs  filter.rs  http.rs  http_utils.rs  mod.rs  tcp.rs  tests.rs
protocol/: Cargo.toml
protocol/src/: connections.rs  lib.rs  pipelines.rs  tls_setup.rs
protocol/src/http/: mod.rs
protocol/src/http/pingora/: context.rs  convert.rs  json.rs  listener.rs  metrics.rs  mod.rs
protocol/src/http/pingora/handler/: hop_by_hop.rs  mod.rs  no_body.rs  normalize.rs  request_body_filter.rs  reserved_headers.rs  response_body_filter.rs  response_filter.rs  upstream_peer.rs  upstream_request.rs  upstream_response.rs  via.rs  with_body.rs
protocol/src/http/pingora/health/: mod.rs  probe.rs  runner.rs  service.rs
protocol/src/http/pingora/kv/: mod.rs
protocol/src/tcp/: mod.rs  proxy.rs  tls_setup.rs
tests/integration/: Cargo.toml
tests/integration/fixtures/: cpex-policy.yaml
tests/integration/fixtures/anthropic/messages/: README.md  basic.json  content_block.json  multi_turn.json  response_headers.json  stop_sequences.json  streaming_basic.json  system.json  temperature.json  to_openai_non_streaming.json  to_openai_streaming.json  tool_defs.json  tool_result.json
tests/integration/tests/suite/: a2a.rs  anthropic_messages.rs  body.rs  body_pipeline.rs  compression.rs  conditions.rs  cors.rs  csrf.rs  downstream_read_timeout.rs  filter_composition.rs  guardrails.rs  health_check.rs  hot_reload.rs  ip_acl.rs  json_body_field.rs  main.rs  mcp.rs  path_rewrite.rs  payload_processing.rs  per_listener_pipeline.rs  prompt_enrich.rs  rate_limit.rs  retry.rs  security.rs  sni_router.rs  tcp_access_log.rs  tcp_load_balancer.rs  tls.rs  url_rewrite.rs  websocket.rs  wildcard_routing.rs
tests/integration/tests/suite/adversarial/: header_smuggling.rs  host_header.rs  ipv6_bypass.rs  mod.rs  path_traversal.rs  rate_limit_bypass.rs
tests/integration/tests/suite/examples/: access_logging.rs  agentic_routing.rs  anthropic_messages.rs  api_key_filter.rs  basic_reverse_proxy.rs  canary_routing.rs  circuit_breaker.rs  conditional_filters.rs  credential_injection.rs  csrf.rs  default_config.rs  header_manipulation.rs  health_checks.rs  least_connections.rs  logging.rs  max_body_guard.rs  max_connections.rs  mod.rs  model_to_header.rs  multi_listener.rs  openai_response_store.rs  openai_response_store_postgres.rs  openai_responses_validate.rs  p2c.rs  path_based_routing.rs  path_rewriting.rs  payload_processing.rs  policy.rs  protocols.rs  redirect.rs  round_robin.rs  session_affinity.rs  static_response.rs  stream_buffer.rs  test_utils.rs  timeout.rs  token_usage_headers.rs  virtual_hosts.rs  websocket.rs  weighted_load_balancing.rs
tests/integration/tests/suite/routing/: basic.rs  filters.rs  host_based.rs  infrastructure.rs  listeners.rs  mod.rs  path_based.rs
tests/utils/: Cargo.toml
tests/utils/src/: example_config.rs  lib.rs  proxy.rs  recording.rs
tests/utils/src/agentic/: a2a.rs  mcp.rs  mod.rs
tests/utils/src/net/: http_client.rs  mod.rs  port.rs  postgres.rs  tls.rs  wait.rs
xtask/: Cargo.toml
xtask/src/: debug.rs  echo.rs  filter_docs.rs  lint_deps.rs  lint_example_tests.rs  main.rs  port.rs  sync_example_readme.rs
xtask/src/benchmark/: cli.rs  compare.rs  flamegraph.rs  mod.rs  orchestrate.rs  proxy.rs  report.rs  resolve.rs  visualize.rs
(+378 files in other folders)
