[package]
name = "praxis-proxy-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Filter pipeline engine and built-in filters for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
name = "praxis_filter"

[features]
default = ["ai-inference"]
ai-inference = ["dep:secrecy", "dep:sqlx", "dep:tokio"]
ext-proc = ["dep:praxis-proto", "dep:tonic", "dep:prost-wkt-types"]
cpex-policy-engine = [
    "dep:cpex",
    "dep:tokio",
]

[package.metadata.cargo-machete]
ignored = ["praxis-proto", "prost-wkt-types", "tonic"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
cpex = { workspace = true, optional = true }
dashmap = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
praxis-core = { workspace = true }
praxis-proto = { workspace = true, optional = true }
rand = { workspace = true }
prost-wkt-types = { workspace = true, optional = true }
regex = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
# Optional, shared by `ai-inference` and `cpex-policy-engine`. The
# `cpex-policy-engine` feature drives plugin `initialize()` at filter
# construction (the praxis
# filter-factory signature is sync, so we block on a single-thread
# runtime); the time/net features let JWT identity plugins fetch JWKS
# at init time.
tokio = { workspace = true, optional = true, features = ["rt", "time", "net"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
jsonwebtoken = "9"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
