[package]
name = "praxis-proxy-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Filter pipeline engine and built-in filters for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
name = "praxis_filter"

[features]
default = []
cpex-policy-engine = [
    "dep:cpex",
    "dep:tokio",
]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
cpex = { workspace = true, optional = true }
dashmap = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
percent-encoding = { workspace = true }
praxis-core = { workspace = true }
praxis-tls = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
# Used by `cpex-policy-engine` for plugin `initialize()` at filter
# construction and JWT identity plugins that fetch JWKS at init time.
tokio = { workspace = true, optional = true, features = ["rt", "sync", "time", "net"] }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
jsonwebtoken = "10.4.0"
metrics-exporter-prometheus = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
