[package]
name = "praxis-proxy-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HTTP, TCP, and protocol adapters for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
name = "praxis_protocol"

[features]
default = ["ai-inference"]
ai-inference = ["praxis-filter/ai-inference"]

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
pingora-core = { workspace = true }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-tls = { workspace = true, features = ["hot-reload"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
