[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Development task runner for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[lints]
workspace = true

[dependencies]
benchmarks = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
plotters = { workspace = true }
praxis = { workspace = true }
praxis-core = { workspace = true }
quote = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "net", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
