[package]
name = "praxis-proxy-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Protobuf and gRPC definitions for Praxis external processing"
# Composite: MIT for hand-written code, Apache-2.0 for vendored Envoy
# protos, BSD-3-Clause for vendored Google well-known types.
license = "MIT AND Apache-2.0 AND BSD-3-Clause"
repository.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "praxis_proto"

# Workspace lints are not inherited: this crate wraps generated protobuf code
# that cannot satisfy the strict style rules applied to hand-written code.
# Lint suppression is handled by crate-level `#![allow(...)]` attributes in
# lib.rs instead.
[lints.rust]
unsafe_code = "deny"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "prost-wkt-types", "tonic-prost"]

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }
